<resources>
    <string name="app_name">Currency Converter</string>
    <string name="pin_code">%1$s%2$s</string>
    <string name="enter_pin_code_hint_text">Введите код</string>
    <string name="pin_code_hide">○○○○</string>
    <string name="pin_code_text">%1$s%2$s</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="back_button_text"><![CDATA[<]]></string>
    <string name="ok_button_text">OK</string>
    <string name="_0">0</string>
    <string name="successfully_logged_in">Successfully Logged In</string>
    <string name="share_button_text">Поделиться</string>
    <string name="share_email_button_text">Отправить по почте</string>
    <string name="call_button_text">Позвонить</string>
    <string name="open_camera_button_text">Запустить камеру</string>
    <string name="user_icon_text">user icon</string>
    <string name="translate">Translate</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="currency">Currency</string>
    <string name="add">Add</string>
    <string name="flag">flag</string>
    <string name="reset_order_of_currencies">Сбросить сортировку</string>
    <string name="sort_by">Сортировать по</string>
    <string name="sort_by_alphabet">Алфавиту</string>
    <string name="sort_by_value">Стоимост</string>
    <string name="delete_currency_alert_dialog_title_text">Are you sure you want to delete?</string>
    <string name="delete_currency_alert_dialog_cancel_button_text">Cancel</string>
    <string name="delete_currency_alert_dialog_delete_button_text">Delete</string>
    <string name="delete_item">Delete Item</string>
    <string name="currencies_list_item_selected">Item Selected</string>
    <string name="cancel">Cancel</string>
    <string name="select_currency">Select currency</string>
    <string name="choose_flag">Choose Flag</string>
    <string name="amount_of_currency">Amount of currency</string>
    <string name="currency_name">Currency name</string>
    <string name="search_currency">Search currency</string>
    <string name="add_currency">Add Currency</string>
    <string name="enter_value_to_be_converted">Enter value to be converted</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statistics_total_spend_time">Проведенное время: %s</string>
    <string name="play">play</string>
    <string name="media_player">media player</string>
    <string name="video_title">Leon The Professional</string>
    <string name="movie_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eleifend iaculis nulla non condimentum. Suspendisse nec facilisis felis. Pellentesque justo neque, fringilla at elementum sed, convallis a lacus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra mauris quis sagittis interdum. Mauris suscipit lobortis suscipit. Ut egestas luctus tortor et euismod. Sed congue accumsan tortor, ac placerat orci venenatis ac. </string>
    <string name="fast_and_furious">Fast and Furious</string>

    //Shortcut Labels
    <string name="shortcut_short_label_favorites">Favorites</string>
    <string name="shortcut_long_label_favorites">Favorites Fragment</string>
    <string name="shortcut_disabled_message_favorites">Favorites Shortcut Disabled</string>
    <string name="random_photo">random photo</string>
    <string name="download">Download</string>
    <string name="image">image</string>
    <string name="chat">Chat</string>
    <string name="message">Message</string>
    <string name="send_message">send message</string>
    <string name="sign_out">Sign Out</string>
    <string name="history">History</string>
</resources>