<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_translate"
        android:title="@string/chat" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites" />

    <item
        android:id="@+id/currencyFragment"
        android:icon="@drawable/ic_currency"
        android:title="@string/currency" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/userProfileFragment"
        android:icon="@drawable/ic_account"
        android:title="@string/profile" />
</menu>