<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/pin_code_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="250dp"
            android:text="@string/pin_code_hide"
            android:textAlignment="center"
            android:textColor="@color/blue_text_color"
            android:textColorHint="@color/hint_text_color"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button9"
            style="@style/BlueButton"
            android:background="@drawable/button_shape_selector"
            android:text="@string/_9"
            app:backgroundTint="@null"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <Button
            android:id="@+id/button8"
            style="@style/BlueButton"
            android:background="@drawable/button_shape_selector"
            android:text="@string/_8"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/button2"
            app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <Button
            android:id="@+id/button7"
            style="@style/BlueButton"
            android:background="@drawable/button_shape_selector"
            android:text="@string/_7"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button6"
            style="@style/BlueButton"
            android:background="@drawable/button_shape_selector"
            android:text="@string/_6"
            app:backgroundTint="@null"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button5"
            style="@style/BlueButton"
            android:background="@drawable/button_shape_selector"
            android:text="@string/_5"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/button2"
            app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button4"
            style="@style/BlueButton"
            android:background="@drawable/button_shape_selector"
            android:text="@string/_4"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button1" />

        <Button
            android:id="@+id/button3"
            style="@style/BlueButton"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape_selector"
            android:text="@string/_3"
            app:backgroundTint="@null"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/pin_code_textView" />

        <Button
            android:id="@+id/button1"
            style="@style/BlueButton"
            android:layout_marginTop="30dp"
            android:text="@string/_1"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/pin_code_textView" />

        <Button
            android:id="@+id/button2"
            style="@style/BlueButton"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape_selector"
            android:text="@string/_2"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pin_code_textView" />


        <Button
            android:id="@+id/buttonBack"
            style="@style/BlueButton"
            android:background="@drawable/button_shape_selector"
            android:text="@string/back_button_text"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/buttonOk"
            style="@style/BlueButton"
            android:background="@drawable/button_shape_selector"
            android:text="@string/ok_button_text"
            app:backgroundTint="@null"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button9" />

        <Button
            android:id="@+id/button0"
            style="@style/BlueButton"
            android:background="@drawable/button_shape_selector"
            android:text="@string/_0"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/button2"
            app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>