<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/currencyFragment">

    <fragment
        android:id="@+id/currencyFragment"
        android:name="com.example.currencyconverter.presentation.converter.ConverterFragment"
        android:label="@string/currency"
        tools:layout="@layout/fragment_currencies" >
        <action
            android:id="@+id/action_currencyFragment_to_currencySelectorBottomSheet"
            app:destination="@id/currencySelectorBottomSheet" />
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.currencyconverter.presentation.favorites.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.currencyconverter.presentation.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/translateFragment"
        android:name="com.example.currencyconverter.presentation.translate.TranslateFragment"
        android:label="@string/translate"
        tools:layout="@layout/fragment_translate" />
    <fragment
        android:id="@+id/userProfileFragment"
        android:name="com.example.currencyconverter.presentation.userprofile.UserProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_user_profile" />
    <dialog
        android:id="@+id/currencySelectorBottomSheet"
        android:name="com.example.currencyconverter.presentation.currencyselector.CurrencySelectorBottomSheet"
        android:label="CurrencySelectorBottomSheet" >
        <action
            android:id="@+id/action_currencySelectorBottomSheet_to_currencyFragment"
            app:destination="@id/currencyFragment" />
    </dialog>
</navigation>